--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.7",
+        "php-imap/php-imap": "^2.0",
         "spatie/laravel-permission": "^5.9",
         "tightenco/ziggy": "^1.0"
     },
