--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME="Laravel Brive"
+APP_NAME="SeratusArt Internal System"
 APP_ENV=local
 APP_KEY=base64:99RtzhiiNkDSkJTQhTIaktVvgTl7OpRpuFL+HNb6bRE=
 APP_DEBUG=true
