--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "laravel/tinker": "^2.7",
         "league/csv": "^9.15",
         "php-imap/php-imap": "^2.0",
+        "spatie/laravel-activitylog": "^4.8",
         "spatie/laravel-permission": "^5.9",
         "tightenco/ziggy": "^1.0"
     },
